[package]
name = "lsp-syslog-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.15.1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
serde_json = "1.0.79"
nom = "7"